[package]
name = "embassy_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-sync = { version = "0.1.0", path = "../../../rust-demo/embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.1.0", path = "../../../rust-demo/embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "defmt", "integrated-timers"] }
embassy-time = { version = "0.1.0", path = "../../../rust-demo/embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-stm32 = { version = "0.1.0", path = "../../../rust-demo/embassy/embassy-stm32", features = ["nightly", "defmt", "stm32f103c8", "unstable-pac", "memory-x", "time-driver-any", "unstable-traits" ]  }
embassy-usb = { version = "0.1.0", path = "../../../rust-demo/embassy/embassy-usb", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "../../../rust-demo/embassy/embassy-futures" }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"

[profile.dev]
opt-level = "s"
